--- a/app/view/index.html
+++ b/app/view/index.html
@@ -7,9 +7,9 @@
 <body>
 <div>
   <div class='center'>
-    <div class='title'>Classify Bear Images 🐻</div>
+    <div class='title'>Classify Mushrooms! Is it safe to eat?</div>
     <p>
-      Use images of <strong>teddy</strong> bears, <strong>black</strong> bears, <strong>grizzly</strong> bears, or
+      Use images of <strong>white</strong> mushrooms, <strong>brown</strong> mushrooms, <strong>poisonous</strong> mushrooms, or
       all three!
     </p>
     <div class='content'>
@@ -21,7 +21,7 @@
                accept='image/*'
                onchange='showPicked(this)'>
       </div>
-      <button class='choose-file-button' type='button' onclick='showPicker()'>Select Image</button>
+      <button class='choose-file-button' type='button' onclick='showPicker()'>Upload Photo</button>
       <div class='upload-label'>
         <label id='upload-label'>No file chosen</label>
       </div>
@@ -29,7 +29,7 @@
         <img id='image-picked' class='no-display' alt='Chosen Image' height='200'>
       </div>
       <div class='analyze'>
-        <button id='analyze-button' class='analyze-button' type='button' onclick='analyze()'>Analyze</button>
+        <button id='analyze-button' class='analyze-button' type='button' onclick='analyze()'>Let's see!</button>
       </div>
       <div class='result-label'>
         <label id='result-label'></label>
